--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel=" preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./src/css/style.css">
   </head>
 
   <body>
@@ -23,7 +26,7 @@
 
       <div class="content">
         <ul class="tabs">
-          <li class="tab">
+          <li class="tab selected">
             <img src="./src/images/sobre.gif" alt="icone sobre mim">
           </li>
 
@@ -34,7 +37,7 @@
 
         <div class="infos-tabs">
 
-          <div class="info">
+          <div class="info selected">
             <h3 class="sub-title">Sobre</h3>
 
             <div class="description">
