--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 
       <div class="content">
         <ul class="tabs">
-          <li class="tab selected">
+          <li class="tab selected" id="about-me">
             <img src="./src/images/sobre.gif" alt="icone sobre mim">
           </li>
 
-          <li class="tab">
+          <li class="tab" id="social-media">
             <img src="./src/images/coracao.gif" alt="icone de redes sociais">
           </li>
         </ul>
 
         <div class="infos-tabs">
 
-          <div class="info selected">
+          <div class="info selected" id="info-about-me">
             <h3 class="sub-title">Sobre</h3>
 
             <div class="description">
@@ -57,7 +57,7 @@
             </div>
           </div>
 
-          <div class="info">
+          <div class="info" id="info-social-media">
             <h3 class="sub-title">Minhas redes</h3>
 
             <ul class="social-media">
@@ -76,6 +76,8 @@
         </div>
       </div>
     </main>
+
+    <script src="./src/js/index.js"></script>
 
   </body>
 
